    (Arpit Agarwal)

    HADOOP-12542. TestDNS fails on Windows after HADOOP-12437. (cnauroth)

    HADOOP-12334. Change Mode Of Copy Operation of HBase WAL Archiving to bypass
    Azure Storage Throttling after retries. (Gaurav Kanade via cnauroth)

    HADOOP-12484. Single File Rename Throws Incorrectly In Potential Race
    Condition Scenarios. (Gaurav Kanade via cnauroth)

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-11291. Log the cause of SASL connection failures.
    (Stephen Chu via cnauroth)

    HADOOP-10786. Fix UGI#reloginFromKeytab on Java 8. (Stephen Chu via wheat9)

  OPTIMIZATIONS

  BUG FIXES
    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

Release 2.7.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-7984. Add hadoop --loglevel option to change log level.
    (Akira AJISAKA via cnauroth)

    HADOOP-11490. Expose truncate API via FileSystem and shell command.
    (Milan Desai via shv)

    HADOOP-11510. Expose truncate API via FileContext. (yliu)

    HADOOP-10987. Provide an iterator-based listing API for FileSystem (kihwal)

  IMPROVEMENTS

    HADOOP-11579. Documentation for truncate. (shv)

    HADOOP-11441. Hadoop-azure: Change few methods scope to public.
    (Shashank Khandelwal via cnauroth)

    HADOOP-9137. Support connection limiting in IPC server (kihwal)

    HADOOP-11498. Bump the version of HTrace to 3.1.0-incubating (Masatake
    Iwasaki via Colin P. McCabe)

    HADOOP-11442. hadoop-azure: Create test jar.
    (Shashank Khandelwal via cnauroth)

    HADOOP-11648. Set DomainSocketWatcher thread name explicitly.
    (Liang Xie via ozawa)

    HADOOP-11430. Add GenericTestUtils#disableLog, GenericTestUtils#setLogLevel
    (cmccabe)
